k3s/apps/vrising/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vrising-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: vrising.arcanum.gagelara.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vrising-service
                port:
                  number: 9876
